kubernetes/mongo_db.yaml
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: mongo-database-server
  namespace: email_namespace 
  
spec:
  selector:
    matchLabels:
      app: mongo-database-server 

  template:
    metadata: 
      labels:
        app: mongo-service 

    spec:
      replicas: 3 
      restartPolicy: onFailure 
      dnsPolicy: Default 
      hostNetwork: true

      containers:

        - name: mongo-emails-service-database 
          image: mongo:latest 
          volumeMounts:

            - mountPath: docker-entrypoint-initdb.d/ 
              name: MongoConfiguration
              readOnly: true 

            - mountPath: /data/db 
              name: MongoDataVolume 


          ports:
            - containerPort: 27017 
            
          command: ["-mongod", "--port", "27017"] 
          resources:
          
              requests:
                 memory: "3Gi"
                 cpu: "0.5"
              limits:
                 memory: "3Gi"
                 cpu: "0.6"
              
        volumes:
         - name: MongoConfiguration
            hostPath:
              path: EmailService/mongo/docker-entrypoint-init.d/

        - name: MongoDataVolume 
          persistentVolumeClaim:
            claimName: MongoPersistentVolumeClaim
