kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment 

metadata:
  name: email-service-nginx-server 
  namespace: ingress-nginx
  
spec:
  selector:
     matchLabels:
      name: internal-service
  template:
    metadata:
      labels: 
        name: internal-service
    spec:
      containers:
        - name: email-service-nginx-server 
          image: nginx:1.7.9 
          volumeMounts:
            - mountPath: etc/nginx/nginx.conf 
              name: nginx-configuration 
          ports:
            - containerPort: 80 
          resources:
            limits:
              cpu: "0.4"
              memory: "1Gi"
            requests:
              cpu: "0.4"
              memory: "1Gi"

      volumes:
        - name: nginx-configuration 
          hostPath:
            path: /EmailService/nginx/nginx.conf
