kubernetes/EmailService.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: email-internal-service 
  namespace: ingress-nginx 
spec:
  type: ClusterIP 
  externalIPs:
    - 192.168.0.10 
  selector:
    app: internal-service
  ports:
   - name: http 
     port: 80 # external port of the nginx deployment...
     targetPort: 80 
     protocol: TCP
