kubernetes/Jenkins.yaml

apiVersion: v1 
kind: Service 
metadata:
  name: jenkins-server-service
  namespace: ingress-nginx
spec: 
  type: ClusterIP
  ports: 
    - name: jenkins-server-ui
      containerPort: 8080
      targetPort: 8080

    - name: jenkins-server-management
      containerPort: 50000 
      targetPort: 50000 

---

apiVersion: v1 
kind: Deployment

metadata:
  name: jenkins-server 
  namespace: jenkins-server-namespace 

spec:
  template:
    metadata:
      labels: 
        app: jenkins-app 
    spec:
      containers:
        - name: jenkins-server 
          image: jenkins:lts 
          ports:
            - name: httpport 
              containerPort: 8080 
              targetPort: 8080 
            
            - name: jnlport 
              containerPort: 40000 
              targetPort: 40000

          livenessProbe:
            exec:
              command: 
            initialDelaySeconds: 10 

          VolumeMounts:
            - MountPath: /jenkins/home/ 
              name: jenkins-storage 

      Volumes:
        - name: jenkins-storage 
          PersistentClaim:
            claimName: jenkins-volume-claim
