kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-network 
  namespace: ingress-nginx 
spec:
  type: NodePort
  rules:
    - http: 
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:  
                name: email-internal-service 
                port: 
                  number: 8060

            path: "/jenkins-server/ui/"
            pathType: Prefix 
            backend: 
              service:
                name: jenkins-server-service 
                port:
                  number: 8080 

            path: "/jenkins-server/management/"
            pathType: Prefix 
            backend: 
              service:
                name: jenkins-server-service 
                port:
                  number: 40000
